# PepperBot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: commands.rs  main.rs
src/commands/: arma.rs  calculate.rs  exchange.rs  friday.rs  goldstar.rs  help.rs  vote.rs
